# dipdata

./: .gitignore  README.md
analisisvis/: pyproject.toml  setup.py
analisisvis/data/: dataset-ayvd2020.csv
analisisvis/notebooks/: 02_zodiaco.ipynb  03_probabilidad.ipynb  05_distribuciones.ipynb  06_graficos_simples.ipynb  07_pandas_avanzado.ipynb  08_graficos_complejos.ipynb  09_regresion_lineal.ipynb  practico.ipynb
curacion/: pyproject.toml  setup.py
curacion/notebooks/: 01-curacion.ipynb  02-importando_datos.ipynb  03-importando_datos.ipynb  04_rss_ingestion.ipynb  practico_final.ipynb
curacion/queries/: 01-databases.sql  01-query.sql  02-databases.sql  02-query.sql  03-databases.sql  03-query.sql  04-query.sql
deploypm/: README.md
distributed/: README.md  setup.py
distributed/conf/spark-2.3.4/: spark-env.sh
distributed/conf/zeppelin-0.8.2/: interpreter.json  zeppelin-env.sh
distributed/inputs/ds/: links_raw.txt  people_sex_height_age_weight.json
distributed/notebooks/: 01_intro_spark.ipynb  02_spark_core.ipynb  03_sql.ipynb  04_dataframes_tablas.ipynb  05_ml.ipynb  06_ml_pipelines.ipynb  07_grafos.ipynb
elasticsearch/: setup.py
elasticsearch/notebooks/: Representacion_y_recuperacion_de_texto.ipynb
introml/: pyproject.toml  setup.py
introml/notebooks/: Lab_1.ipynb  Lab_2.ipynb
nonsuperv/: setup.py
recsys/: README.md  pyproject.toml  setup.py
recsys/notebooks/: 02_recsys.ipynb  04_fwls.ipynb  practico.ipynb
supervised/: README.md  setup.py
supervised/notebooks/: baseline.ipynb
(+30 files in other folders)
